email service working

--- a/recruit/src/main/resources/application.properties
+++ b/recruit/src/main/resources/application.properties
@@ -12,3 +12,12 @@ jwt.secret=javainuse2
 jwt.cookie.secure=true
 jtw.cookie.domain=arenella-ict.com
 jwt.cookie.maxage=500000
+###
+# Email
+###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kparkings@gmail.com
+spring.mail.password=zhspriurnpnzqqmo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
