--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -108,6 +108,15 @@
 		    <artifactId>log4j-to-slf4j</artifactId>
 		    <version>2.16.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+    	<!-- Freemarker templating engine -->
+    	<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
 			
 	</dependencies>
 
