--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -69,16 +69,34 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		
+		<!--  [KP] Issue : conflict with fr.opensagres.xdocreport v 1.0.6
 		<dependency>
-    		<groupId>org.apache.poi</groupId>
+    		<gvroupId>org.apache.poi</groupId>
     		<artifactId>poi</artifactId>
-    		<version>5.0.0</version>
+    		<version>5.2.0</version>
 		</dependency>
+		
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-ooxml</artifactId>
-		    <version>5.0.0</version>
+		    <version>5.2.0</version>
 		</dependency>
+		-->
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/ooxml-schemas -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>ooxml-schemas</artifactId>
+		    <version>1.4</version>
+		</dependency>		
+		 		
+		<dependency>
+			<groupId>fr.opensagres.xdocreport</groupId>
+			<artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
 		<dependency>
     		<groupId>org.apache.pdfbox</groupId>
@@ -117,7 +135,6 @@
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
-			
 	</dependencies>
 
 	<build>
