--- a/recruit-gui/angular.json
+++ b/recruit-gui/angular.json
@@ -80,7 +80,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "recruit-ui:build"
+            "browserTarget": "recruit-ui:build",
+            "host": "127.0.0.1",
+            "port": 4200
           },
           "configurations": {
             "production": {
