skills table in candidate

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1358,3 +1358,17 @@ databaseChangeLog:
             schemaName: candidate  
             tableName: event_candidate_email_request
             
+  - changeSet:
+      id: create_candidate_skills_table
+      author: kparkings
+      changes:
+        - createTable:
+            tableName: skills
+            schemaName: candidate
+            columns:
+              - column:
+                  name: skill
+                  type: varchar(36)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
