--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -135,6 +135,17 @@
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parsers -->
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-core</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+		<dependency>
+   			 <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-parsers</artifactId>
+    		<version>1.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
