--- a/recruit/pom.xml
+++ b/recruit/pom.xml
@@ -146,6 +146,11 @@
 		    <artifactId>tika-parsers</artifactId>
     		<version>1.17</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-test</artifactId>
+    		<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
