adding profile working. photo format using numeric not text

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1537,7 +1537,7 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: photo_bytesf
+                  name: photo_bytes
                   type: bytea
                   constraints:
                     nullable: true
@@ -1566,7 +1566,7 @@ databaseChangeLog:
                     default: false
               - column:
                   name: job_title
-                  type: boolean
+                  type: varchar
                   constraints:
                     nullable: true
               - column:
