--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1686,3 +1686,31 @@ databaseChangeLog:
             tableName: event_supply_or_demand_viewed
             schemaName: recruiter
             columnNames: id, recruiter_id
+  - changeSet:
+      id: addCandidateProfileCols
+      author: kevin
+      changes:
+        - addColumn:
+            tableName: candidate
+            schemaName: candidate
+            columns:
+            - column:
+                name: introduction
+                type: varchar
+            - column:
+                name: rate_currency
+                type: varchar
+            - column:
+                name: rate_period
+                type: varchar
+            - column:
+                name: rate_value
+                type: numeric
+                constraints:
+                  default: 0
+            - column:
+                name: photo_format
+                type: varchar
+            - column:
+                name: photo_bytes
+                type: bytea
