--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1742,4 +1742,19 @@ databaseChangeLog:
             - column:
                 name: photo_bytes
                 type: bytea
+  - changeSet:
+      id: addColumn-active_to_listing
+      author: kevin
+      changes:
+        - addColumn:
+            tableName: listing
+            schemaName: listings
+            columns:
+            - column:
+                name: active
+                type: boolean
+                constraints:
+                  nullable: true
+                  default: true
+                  
                 
