enable/disable marketplace based upon subscription

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1756,5 +1756,29 @@ databaseChangeLog:
                 constraints:
                   nullable: true
                   default: true
-                  
+  - changeSet:
+      id: addColumn-active_to_supply_and_demand
+      author: kevin
+      changes:
+        - addColumn:
+            tableName: offered_candidates
+            schemaName: recruiter
+            columns:
+            - column:
+                name: active
+                type: boolean
+                constraints:
+                  nullable: true
+                  default: true
+        - addColumn:
+            tableName: open_positions
+            schemaName: recruiter
+            columns:
+            - column:
+                name: active
+                type: boolean
+                constraints:
+                  nullable: true
+                  default: true                  
+                
                 
